[package]
name = "settimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "settimer"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Memory"] }
